fix: make it work

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
   error_log /var/log/nginx/error.log;
   server {
     listen 80;
-    server_name www.japaninsider.co;
+    server_name localhost;
 
     # For certbot url validation
     location /.well-known/acme-challenge/ {
@@ -22,15 +22,17 @@ http {
 
   server {
     listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/www.japaninsider.co/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.japaninsider.co/privkey.pem;
+    # ssl_certificate /etc/letsencrypt/live/www.japaninsider.co/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/www.japaninsider.co/privkey.pem;
+    ssl_certificate /etc/ssl/certs/localhost.crt;
+    ssl_certificate_key /etc/ssl/private/localhost.key;
 
     # The folks at Let’s Encrypt maintain best-practice HTTPS configurations for nginx.
     # This will score us a straight A in the SSL Labs test!
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+    # ssl_dparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    server_name www.japaninsider.co;
+    server_name localhost;
     root /var/www/html;
     index index.html index.php;
 
