feat: add local self sign cert script and update readme

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,10 +22,8 @@ http {
 
   server {
     listen 443 ssl;
-    # ssl_certificate /etc/letsencrypt/live/www.japaninsider.co/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/www.japaninsider.co/privkey.pem;
-    ssl_certificate /etc/ssl/certs/localhost.crt;
-    ssl_certificate_key /etc/ssl/private/localhost.key;
+    ssl_certificate /etc/letsencrypt/live/www.japaninsider.co/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.japaninsider.co/privkey.pem;
 
     # The folks at Let’s Encrypt maintain best-practice HTTPS configurations for nginx.
     # This will score us a straight A in the SSL Labs test!
