--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,15 +56,23 @@ http {
           break;
       }
 
-      root /var/www;
+      try_files $uri @static_landing;
     }
 
     location /jp {
-      alias /var/www;
+      try_files $uri @static_landing;
     }
 
     location /cross-border-sourcing {
-      alias /var/www;
+      try_files $uri @static_landing;
+    }
+
+    location @static_landing {
+      proxy_set_header        Host $host;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Forwarded-Proto $scheme;
+      proxy_pass http://landing:3001;
     }
 
     location /static/ {
